--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,7 +1,12 @@
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Home</title>
+</head>
+
 {% extends "layout.html" %}
 {% block title %}{% endblock %}
 {% block content %}
 
-Infopage, Dashboard, Links
+Home
 
 {% endblock %}
