--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -15,7 +15,6 @@
     <link data-require="bootstrap-css@3.1.1" data-semver="3.1.1" rel="stylesheet"
         href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
 
-
 </head>
 
 <body>
@@ -34,6 +33,14 @@
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('analytics') }}">Analytics <span
+                            class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('regions') }}">Regions<span
+                            class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('schemas') }}">Schemas<span
                             class="sr-only">(current)</span></a>
                 </li>
             </ul>
