--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,3 +1,8 @@
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>Login</title>
+</head>
+
 {% extends "layout.html" %}
 {% block content %}
 <div class="content-section">
