--- a/src/templates/analytics.html
+++ b/src/templates/analytics.html
@@ -22,9 +22,8 @@
     <!-- Sidebar -->
     <div class="bg-light border-right" id="sidebar-wrapper">
         <div class="list-group list-group-flush">
-            {% for id, unit in plots.items() %}
-            <a href="?region={{id}}" class="list-group-item list-group-item-action bg-light">{{ unit["unit_label"]
-                }}</a>
+            {% for unit in units %}
+            <a href="?unit={{ unit['_id'] }}" class="list-group-item list-group-item-action bg-light">{{ unit['label'] }}</a>
             {% endfor %}
         </div>
     </div>
@@ -34,14 +33,14 @@
     <div id="page-content-wrapper">
         {% if not plot %}
         <!-- <div class="container-fluid"> -->
-        {% for graph in plots[unit_id]["graphs"] %}
+        {% for graph in unit["graphs"] %}
         <div class="card" style="width: 20rem;" id="{{unit_id}}">
             <img class="card-img-top" src="{{ graph.get('img') }}">
             <!--alt="Card image cap" -->
             <div class="card-block">
                 <h4 class="card-title">{{ graph.get("title", "Title not available") }}</h4>
                 <p class="card-text">{{ graph.get("description", "Description not available") }}</p>
-                <a href="?region={{unit_id}}&type={{graph.get('type', None)}}" class="btn btn-primary">View</a>
+                <a href="?unit={{unit['_id']}}&type={{graph.get('type', None)}}" class="btn btn-primary">View</a>
             </div>
         </div>
         {% endfor %}
