--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -19,7 +19,6 @@
 
 <body>
 
-    <!--bootstrap (GUI)-->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 
         <div class="collapse navbar-collapse w-100 order-1 order-md-0 dual-collapse2">
@@ -28,27 +27,32 @@
                     <a class="nav-link" href="{{ url_for('home') }}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('browser') }}">Data Browser <span
+                    <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard<span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('analytics') }}">Analytics <span
+                    <a class="nav-link" href="{{ url_for('dm') }}">Data Mesh<span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('regions') }}">Regions<span
+                    <a class="nav-link" href="{{ url_for('dps') }}">Data Products<span
                             class="sr-only">(current)</span></a>
                 </li>
             </ul>
         </div>
 
         <div class="mx-auto order-0">
-            <a class="navbar-brand mx-auto" href="#">Data Plattform</a>
+            <a class="navbar-brand mx-auto" href="#">Data Platform</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                 <span class="navbar-toggler-icon"></span>
             </button>
         </div>
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('add_dp') }}">Add Data Product</a>
+                </li>
+            </ul>
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('login') }}">Login</a>
