--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -41,10 +41,14 @@
         <div class="navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('add_dp') }}">Add Data Product<span
+                            class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
                     {% if "sts" in session %}
-                    <a class="nav-link" href="{{ url_for('login') }}">Logout</a>
+                    <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                     {% else %}
-                    <a class="nav-link" href="{{ url_for('logout') }}">Login</a>
+                    <a class="nav-link" href="{{ url_for('login') }}">Login</a>
                     {% endif %}
                 </li>
             </ul>
