--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -45,7 +45,7 @@
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item active">
-                    {% if "sts" in session %}
+                    {% if "login" in session %}
                     <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
                     {% else %}
                     <a class="nav-link" href="{{ url_for('login') }}">Login</a>
