--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -20,14 +20,10 @@
 <body>
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <a class="navbar-brand" href="{{ url_for('home') }}">Mesh Plattform</a>
+        <a class="navbar-brand" href="{{ url_for('dashboard') }}">Mesh Plattform</a>
 
         <div class="collapse navbar-collapse w-100 order-1 order-md-0 dual-collapse2">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard<span
-                            class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('dm') }}">Data Mesh<span class="sr-only">(current)</span></a>
                 </li>
