--- a/src/templates/dataproducts.html
+++ b/src/templates/dataproducts.html
@@ -3,8 +3,7 @@
     <title>Data Products</title>
 
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <!-- Bootstrap core CSS -->
-    <link href="../static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="../static/css/sidebar.css" />
 </head>
 
 {% extends "layout.html" %}
