--- a/src/templates/dataproducts.html
+++ b/src/templates/dataproducts.html
@@ -17,7 +17,7 @@
         <div class="sidebar-heading">Data Products</div>
         <div class="list-group list-group-flush">
             {% for dp in dps %}
-            <a href="{{ url_for('dps', dp_id= dp['_id'] ) }}" class="list-group-item list-group-item-action bg-light">{{
+            <a href="{{ url_for('dps', dp_index= dps.index(dp) ) }}" class="list-group-item list-group-item-action bg-light">{{
                 dp["label"]
                 }}</a>
             {% endfor %}
@@ -105,7 +105,7 @@
                                         <td>{{ file["description"] }}</td>
                                         <td>
                                             {% if file['location'] != 'Not available' %}
-                                            <a href="{{ url_for('download_from_s3', location=file['path']) }}">{{
+                                            <a href="{{ url_for('download_from_s3', location=file['path'] , region=dp["region"] ) }}">{{
                                                 file['location'] }}</a>
                                             {% else %}
                                             {{ file['location'] }}
